- Fix for bug #15057: getimagesize() crashes when offline (on MacOSX)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@68286 c90b9560-bf6c-de11-be94-00142212c4b1